--- a/Frontend/hello/templates/employee/index.html
+++ b/Frontend/hello/templates/employee/index.html
@@ -61,13 +61,11 @@
           {% endif %}
           <div class="col"> {{profile_json.surname}} {{profile_json.name}} {{profile_json.patronymic}}</div>
           <div>
+            <button type="button" data-toggle="modal" data-target="#changeProfilePicModal" class="btn btn-outline-primary w-100 m-1"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-person-bounding-box" viewBox="0 0 16 16">
+              <path d="M1.5 1a.5.5 0 0 0-.5.5v3a.5.5 0 0 1-1 0v-3A1.5 1.5 0 0 1 1.5 0h3a.5.5 0 0 1 0 1zM11 .5a.5.5 0 0 1 .5-.5h3A1.5 1.5 0 0 1 16 1.5v3a.5.5 0 0 1-1 0v-3a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 1-.5-.5M.5 11a.5.5 0 0 1 .5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 1 0 1h-3A1.5 1.5 0 0 1 0 14.5v-3a.5.5 0 0 1 .5-.5m15 0a.5.5 0 0 1 .5.5v3a1.5 1.5 0 0 1-1.5 1.5h-3a.5.5 0 0 1 0-1h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 1 .5-.5"/>
+              <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm8-9a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+            </svg> Изменить аватар</button>
             <button type="button" class="btn btn-outline-primary w-100 m-1">Активность</button>
-            <form method ="post" enctype="multipart/form-data" action="/img_upload/{{id}}">
-              {% csrf_token %}
-              {{ form.as_p }}
-              <input type="file" id="emp_avatar" name="avatar" accept="image/png, image/jpeg" />
-              <button class="btn btn-outline-primary w-100 m-1" type="submit">Загрузить изображение</button>
-          </form>
           </div>
         </div>
 
@@ -179,7 +177,39 @@
 
   </div>
 
-  </div>
+  <main>
+    <div class="modal fade" id="changeProfilePicModal" tabindex="-1" role="dialog" aria-labelledby="changeProfilePicModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="changeProfilePicModalLabel">Изменить изображение профиля</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="modal-body">
+              <form method ="post" enctype="multipart/form-data" action="/img_upload/{{id}}">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <div class="input-group">
+                <input class="form-control" type="file" id="emp_avatar" name="avatar" accept="image/png, image/jpeg">
+                <button class="btn btn-outline-primary" type="submit">Загрузить</button>
+              </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+                
+              </div>
+            </div>
+            </form>
+          </div>
+          
+        </div>
+      </div>
+  </main>
+
+
 
 </body>
 <script>
