--- a/Frontend/hello/templates/Base/navbar.html
+++ b/Frontend/hello/templates/Base/navbar.html
@@ -1,14 +1,22 @@
 <script>
   function trySearch() {
+    
     let text = document.getElementById("searchText").value;
-    window.location.href = '/search/'+text;
+    let location;
+    if (window.location.pathname.includes("users"))
+      location = "users"
+    else if (window.location.pathname.includes("computers"))
+      location = "computers"
+    else if (window.location.pathname.includes("groups"))
+      location = "groups"
+    window.location.href = '/search/'+location +'/'+ text;
   }
   function trySearchtext() {
     if (event.key=='Enter') {
-      let text = document.getElementById("searchText").value;
-      window.location.href = '/search/'+text;
+      trySearch();
     }
   }
+
 </script>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap mb-3 p-0 shadow">
