--- a/Frontend/hello/templates/settings/index.html
+++ b/Frontend/hello/templates/settings/index.html
@@ -53,6 +53,41 @@
           {% include "../Base/sidebar.html" %}
           <main height="100%" class="col-md-9 row ml-sm-auto col-lg-10 px-md-4">
             <button type="button" data-toggle="modal" data-target="#createUserModal" class="btn btn-primary mx-1 my-1 col"> Создать пользователя</button>
+            <button type="button" data-toggle="modal" data-target="#createGroupModal" class="btn btn-primary mx-1 my-1 col"> Создать группу</button>
+
+            <div class="modal fade" id="createGroupModal" tabindex="-1" role="dialog" aria-labelledby="createGroupModalLabel" aria-hidden="true">
+              <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="ccreateGroupModalLabel">Создать группу</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    <form  method="POST" action="/createGroup" id="groupForm">
+                      {% csrf_token %}
+                      <div class="form-group">
+                        <label for="Name" class="col-form-label">Имя:</label>
+                        <input type="text" class="form-control" id="Name" name="Name"  required>
+            
+                        <label for="Description" class="col-form-label">Описание:</label>
+                        <input type="text" class="form-control" id="Description" name="Description"  required>
+                        <label for="Domain" class="col-form-label">Домен:</label>
+                        <input type="text" class="form-control" id="Domain" name="Domain"  required>
+
+                      </div>
+                      <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
+                    <button id=""type="" class="btn btn-primary">Добавить</button>
+                  </div>
+                    </form>
+                  </div>
+                  
+                </div>
+              </div>
+            </div>
+
             <div class="modal fade" id="createUserModal" tabindex="-1" role="dialog" aria-labelledby="createUserModalLabel" aria-hidden="true">
               <div class="modal-dialog" role="document">
                 <div class="modal-content">
@@ -65,7 +100,7 @@
                   <div class="modal-body">
                     <form  method="POST">
                       {% csrf_token %}
-                      <div class="form-group">
+                      <div class="form-group" >
                         <label for="name" class="col-form-label">Имя:</label>
                         <input type="text" class="form-control" id="name" name="name"  required>
             
