--- a/Frontend/hello/templates/group/index.html
+++ b/Frontend/hello/templates/group/index.html
@@ -7,6 +7,13 @@
       let UserLogin = document.getElementById("UserLoginforUserInfo").value;
       await fetch(`http://localhost:7095/User?UserLogin=${UserLogin}`).then(response => response.json()).then(data => alert(JSON.stringify(data)));
     }
+    $(document).ready(function(){
+    $(".hoverDiv").hover(function(){
+        $(this).css("background", "#f5f5f5");
+    }, function(){
+        $(this).css("background", "#fff");
+    });
+});
   </script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
     integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
@@ -136,8 +143,39 @@
 
             </div>
             <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
-       
-          </div>
+                {% if members is None %}
+                    <div class="alert alert-danger text-center mt-3">
+                        Не удалось получить список пользователей
+                    </div>
+                {% else %}
+                <table class="table table-hover table-striped">
+                    <thead>
+                      <tr class="fw-bold border-bottom py-2 bg-light ms-0">
+                          <th class="text-center">Фамилия</th>
+                          <th class="text-center">Имя</th>
+                          <th class="text-center">Отчество</th>
+                          <th class="text-center">Должность</th>
+                          <th class="text-center">AD</th>
+                      </tr>
+                    </thead>
+                      <tbody>
+                        {% for member in members %}
+                      <tr class="border-bottom py-2 align-items-center ms-0" onclick='window.location="/AD/{{domain}}/{{member.Name}}";'>
+                        <td class="text-center">{{ member.extensionAttribute1 }}</td>
+                        <td class="text-center">{{ member.extensionAttribute2 }}</td>
+                        <td class="text-center">{{ member.extensionAttribute3 }}</td>
+                        <td class="text-center">{{ member.Title }}</td>
+                        <td class="text-center text-primary"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-windows" viewBox="0 0 16 16">
+                            <path d="M6.555 1.375 0 2.237v5.45h6.555V1.375zM0 13.795l6.555.933V8.313H0v5.482zm7.278-5.4.026 6.378L16 16V8.395H7.278zM16 0 7.33 1.244v6.414H16V0z" />
+                        </svg>
+                        {{ domain }}\{{ member.Name }}</td>
+                      </tr>
+                      {% endfor %}
+                  </tbody>
+                </table>
+                {% endif %}
+            </div>
+            
           
 
           </div>
