описание где? правильно, в property

--- a/Frontend/hello/templates/group/index.html
+++ b/Frontend/hello/templates/group/index.html
@@ -92,25 +92,15 @@
                 <div class="col-4">SamAccountName</div>
                 <div class="col-4 ">{{group_json.SamAccountName}} </div>
               </div>
-              <div class="w-100 border-top"></div>  
-              <div class="col row">
-                <div class="col-4">PSComputerName: </div>
-                <div class="col-4 " style="width: 50%;"> {{group_json.PSComputerName}} </div>
-              </div>
-              <div class="w-100 border-top"></div>
-              <div class="col row">
-                <div class="col-4">RunspaceId</div>
-                <div class="col-4 " style="width: 50%;"> {{group_json.RunspaceId}} </div>
-              </div>
-              <div class="w-100 border-top"></div>
-              <div class="col row">
-                <div class="col-4"> PSShowComputerName</div>
-                <div class="col-4 "> {{group_json.RunspaceId}}</div>
-              </div>
               <div class="w-100 border-top"></div>
               <div class="col row">
                 <div class="col-4">DistinguishedName</div>
                 <div class="col-4 " style="width: 50%;"> {{group_json.DistinguishedName}} </div>
+              </div>
+              <div class="w-100 border-top"></div>
+              <div class="col row">
+                <div class="col-4">Описание</div>
+                <div class="col-4 ">{{group_json.Description}} </div>
               </div>
               <div class="w-100 border-top"></div>
               <div class="col row">
@@ -124,12 +114,12 @@
               </div>
               <div class="w-100 border-top"></div>
               <div class="col row">
-                <div class="col-4">ObjectClass</div>
+                <div class="col-4">Объект</div>
                 <div class="col-4 ">{{group_json.ObjectClass}} </div>
               </div>
               <div class="w-100 border-top"></div>
               <div class="col row">
-                <div class="col-4">ObjectGUID</div>
+                <div class="col-4">GUID</div>
                 <div class="col-4 ">{{group_json.ObjectGUID}} </div>
               </div>
               <div class="w-100 border-top"></div>
@@ -137,9 +127,8 @@
                 <div class="col-4">SID</div>
                 <div class="col-4 ">{{group_json.SID}} </div>
               </div>
+              
               <div class="w-100 border-top"></div>
-
-
 
             </div>
             <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">
